# atlas-athena-gpu-tutorial-2025

./: .gitattributes  .gitignore  01_CUDA_LinearTransform.ipynb  02_CUDA_xAODCalib.ipynb  03_AsynchronousAlgorithms.ipynb  03_CUDA_AsynchronousAlgorithms.ipynb  04_SYCL_LinearTransform.ipynb  CMakeLists.txt  README.md  build_env.sh
CUDAExamples/: CMakeLists.txt
CUDAExamples/debug/: 01_LinearTransformCrashBacktrace.txt
CUDAExamples/python/: 01_LinearTransformConfig.py  02_xAODCalibConfig.py  03_Asynchronous.py
CUDAExamples/src/01_LinearTransform/: LinearTransformCUDAAlg.cu  LinearTransformCUDAAlg.h
CUDAExamples/src/01_LinearTransform/solution/: LinearTransformCUDAAlg.cu
CUDAExamples/src/01_LinearTransformAlg/: LinearTransformCUDA.cu  LinearTransformCUDA.h  LinearTransformCUDAAlg.cu  LinearTransformCUDAAlg.h
CUDAExamples/src/02_xAODCalib/: ElectronCalibCUDAAlg.cxx  ElectronCalibCUDAAlg.h  ElectronDeviceContainer.h  calibrateElectrons.cu  calibrateElectrons.h
CUDAExamples/src/02_xAODCalib/solution/: ElectronCalibCUDAAlg.cxx  ElectronDeviceContainer.h  calibrateElectrons.cu
CUDAExamples/src/03_Asynchronous/: JetPullCUDAAlg.cu  JetPullCUDAAlg.cxx  JetPullCUDAAlg.h
CUDAExamples/src/03_Asynchronous/solution/: JetPullCUDAAlg.cu.soln1  JetPullCUDAAlg.cu.soln2  JetPullCUDAAlg.cu.soln3
CUDAExamples/src/components/: CUDAExamples_entries.cxx
SYCLExamples/: CMakeLists.txt
SYCLExamples/python/: 04_LinearTransformConfig.py
SYCLExamples/src/04_LinearTransform/: LinearTransformSYCLAlg.h  LinearTransformSYCLAlg.sycl
SYCLExamples/src/04_LinearTransform/solution/: LinearTransformSYCLAlg.sycl
SYCLExamples/src/components/: SYCLExamples_entries.cxx
scripts/: .cmd_perlmutter.sh  .env_oneapi.sh  .env_perlmutter.sh  .env_swan.sh  .env_swan_oneapi.sh  build_env.sh  cuda-gdb.sh  run_command.sh  run_on_perlmutter.sh  run_on_swan.sh  run_on_swan_oneapi.sh  setup_perlmutter.sh  setup_swan.sh  setup_swan_oneapi.sh  start_container.sh
